--- a/manifest.plist
+++ b/manifest.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.hotGame.zsylAkTest</string>
+				<string>com.hotGame1.zsyl</string>
 				<key>bundle-version</key>
 				<string>1.7.0</string>
 				<key>kind</key>
