--- a/fxyl/pre/manifest.plist
+++ b/fxyl/pre/manifest.plist
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>FXYL</string>
+				<string>FXYL-PRE</string>
 			</dict>
 		</dict>
 	</array>
